--- a/ModuloMarketing.Test/ModuloMarketing.Test.csproj
+++ b/ModuloMarketing.Test/ModuloMarketing.Test.csproj
@@ -19,6 +19,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <ProjectReference Include="../ModuloMarketing.Api/ModuloMarketing.Api.csproj" />
   </ItemGroup>
 
 </Project>
