--- a/ModuloMarketing.Api/appsettings.json
+++ b/ModuloMarketing.Api/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "Host=localhost;Username=postgres;Password=postgres;Database=crm"
 }
