--- a/ModuloMarketing.Api/appsettings.json
+++ b/ModuloMarketing.Api/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "Host=localhost;Username=postgres;Password=postgres;Database=crm"
+  "ConnectionString": "Host=150.136.54.24:5432;Username=postgres;Password=admin;Database=marketingdb"
 }
