--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CodeCov Config
+name: Tests
 
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
@@ -18,8 +18,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        dotnet-version: [ '3.1.x', '6.0.x' ]
-
+        dotnet-version:
+          - '3.1'
+          - '6.0'
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v3
