--- a/ModuloMarketing.Api/appsettings.json
+++ b/ModuloMarketing.Api/appsettings.json
@@ -5,6 +5,22 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Warning"
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "../logs/webapi-.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3} {Username} {Message:lj}{Exception}{NewLine}"
+        }
+      }
+    ]
+  },
   "AllowedHosts": "*",
   "ConnectionString": "Host=150.136.54.24:5435;Username=postgres;Password=admin;Database=marketingdb"
 }
