Configuração do dockefile

--- a/ModuloMarketing.Api/appsettings.json
+++ b/ModuloMarketing.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.File" ],
-    "MinimumLevel": {
+    "Debug": {
       "Default": "Warning"
     },
     "WriteTo": [
