--- a/ModuloMarketing.Api/appsettings.json
+++ b/ModuloMarketing.Api/appsettings.json
@@ -7,17 +7,22 @@
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.File" ],
-    "Debug": {
-      "Default": "Warning"
+    "MinimumLevel": {
+      "MinimumLevel": "Debug"
     },
+
     "WriteTo": [
       {
         "Name": "File",
         "Args": {
           "path": "../logs/webapi-.log",
           "rollingInterval": "Day",
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3} {Username} {Message:lj}{Exception}{NewLine}"
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3} {Username} {Message:lj}{Exception}{NewLine}",
+          "restrictedToMinimumLevel": "Warning"
         }
+      },
+      {
+        "Name": "Console"
       }
     ]
   },
