--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/crm-cavalcante:vendas
+          tags: ${{ secrets.DOCKER_USERNAME }}/crm-cavalcante:marketing
 
   Execute_POST_request:
     name: Execute POST request
