--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         with:
-          platforms: linux/amd64,linux/arm/v7
+          platforms: linux/arm64, linux/amd64
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
