--- a/ModuloMarketing.Api/appsettings.json
+++ b/ModuloMarketing.Api/appsettings.json
@@ -27,5 +27,5 @@
     ]
   },
   "AllowedHosts": "*",
-  "ConnectionString": ""
+  "ConnectionString": "Host=150.136.54.24:5435;Username=postgres;Password=admin;Database=marketingdb"
 }
