--- a/ModuloMarketing.Api/Properties/launchSettings.json
+++ b/ModuloMarketing.Api/Properties/launchSettings.json
@@ -16,7 +16,8 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7094;http://localhost:5094",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "CONNECTION_STRING_MARKETING": "Host=150.136.54.24:5435;Username=postgres;Password=admin;Database=marketingdb"
       }
     },
     "IIS Express": {
