--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,30 +38,6 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
-  # run_cov_tests:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Code Coverage Report
-  #       uses: irongut/CodeCoverageSummary@v1.3.0
-  #       with:
-  #         filename: coverage/**/coverage.cobertura.xml
-  #         badge: true
-  #         fail_below_min: true
-  #         format: markdown
-  #         hide_branch_rate: false
-  #         hide_complexity: true
-  #         indicators: true
-  #         output: both
-  #         thresholds: '60 80'
-
-  #     - name: Add Coverage PR Comment
-  #       uses: marocchino/sticky-pull-request-comment@v2
-  #       if: github.event_name == 'pull_request'
-  #       with:
-  #         recreate: true
-  #         path: code-coverage-results.md
-
   horusec-security:
     name: horusec-security
     needs: build_test
@@ -75,6 +51,30 @@ jobs:
       run: |
         curl -fsSL https://raw.githubusercontent.com/ZupIT/horusec/main/deployments/scripts/install.sh | bash -s latest
         horusec start -p="./" -e="true" --disable-docker="true" --enable-git-history="true" --enable-commit-author="true"
+
+  sonarqube:
+    runs-on: ubuntu-latest
+    needs: horusec-security
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        # Disabling shallow clones is recommended for improving the relevancy of reporting
+        fetch-depth: 0
+    - name: SonarQube Scan
+      uses: sonarsource/sonarqube-scan-action@master
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        args: >
+          -Dsonar.qualitygate.wait=true
+    - name: SonarQube Quality Gate check
+      id: sonarqube-quality-gate-check
+      uses: sonarsource/sonarqube-quality-gate-action@master
+      # Force to fail step after specific time.
+      timeout-minutes: 5
+      env:
+       SONAR_TOKEN: ${{ secrets.SONAR_PROJECT_TOKEN }}
+       
   
   docker-build:
     name: Build Docker image
